--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   
   #theme
   flex_color_scheme: ^8.2.0
+  #material symbols
+  material_symbols_icons: ^4.2858.1
 
 dev_dependencies:
   flutter_test:
