--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   flex_color_scheme: ^8.2.0
   #material symbols
   material_symbols_icons: ^4.2858.1
+  #splash screen
+  another_flutter_splash_screen: ^1.2.1
 
 dev_dependencies:
   flutter_test:
@@ -60,7 +62,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/app/swapme.gif
+    
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
