--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   material_symbols_icons: ^4.2858.1
   #splash screen
   another_flutter_splash_screen: ^1.2.1
+  #launcheer icons
+  flutter_launcher_icons: ^0.14.4
 
 dev_dependencies:
   flutter_test:
@@ -49,6 +51,25 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+
+#flutter_launcher_icons:
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/app/icon/logo_dark.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  web:
+    generate: true
+    image_path: "assets/app/icon/logo_dark.png"
+    background_color: "#6044FF"
+    theme_color: "#6044FF"
+  windows:
+    generate: false
+    image_path: "assets/app/icon/logo_dark.png"
+    icon_size: 48 # min:48, max:256, default: 48
+  macos:
+    generate: false
+    image_path: "assets/app/icon/logo_dark.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -64,6 +85,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/app/swapme.gif
+    - assets/app/icon/logo_ligth.png
+    - assets/app/icon/logo_dark.png
     
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
