--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -96,6 +96,7 @@ flutter:
     - assets/app/swapme.gif
     - assets/app/icon/logo_ligth.png
     - assets/app/icon/logo_dark.png
+    - assets/welcome/
     
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
