--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   #freezed for immutable data classes
   freezed_annotation: ^2.4.4
   json_annotation: ^4.9.0
+  #glassmorphism
+  glossy: ^0.0.5
 
 dev_dependencies:
   flutter_test:
