Implementa la dependencia GetX en el proyecto, reemplazando Flutter Riverpod en el controlador de bienvenida y en la página de bienvenida. Se actualiza el archivo pubspec.yaml y pubspec.lock para incluir la nueva versión de GetX. Se ajustan las animaciones y la estructura del componente WelcomeLayout para mejorar la experiencia de usuario en la pantalla de bienvenida.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   json_annotation: ^4.9.0
   #glassmorphism
   glossy: ^0.0.5
+  #getx
+  get: ^4.7.2
 
 dev_dependencies:
   flutter_test:
