--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -101,6 +101,8 @@ flutter:
     - assets/app/icon/logo_ligth.png
     - assets/app/icon/logo_dark.png
     - assets/welcome/
+    - assets/vids/login
+    - assets/vids/login/bg.mp4
     
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
