Agrega la dependencia video_player en pubspec.yaml y actualiza pubspec.lock. Implementa un controlador de video en login_layout.dart para reproducir un video de fondo en la pantalla de inicio, mejorando la experiencia visual. Se realizan ajustes en la configuración de Xcode para integrar correctamente las dependencias de Pods.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   glossy: ^0.0.5
   #getx
   get: ^4.7.2
+  #video player
+  video_player: ^2.10.0
 
 dev_dependencies:
   flutter_test:
@@ -101,8 +103,8 @@ flutter:
     - assets/app/icon/logo_ligth.png
     - assets/app/icon/logo_dark.png
     - assets/welcome/
-    - assets/vids/login
     - assets/vids/login/bg.mp4
+  
     
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
