--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,10 @@ dependencies:
   firebase_core: ^4.0.0
   firebase_auth: ^6.0.0
   firebase_database: ^12.0.0
+  cloud_firestore: ^6.0.0
+  #auth
+  google_sign_in: ^7.1.1
+  sign_in_with_apple: ^7.0.1
 
 
 dev_dependencies:
