--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   #auth
   google_sign_in: ^7.1.1
   sign_in_with_apple: ^7.0.1
+  #storage & media
+  firebase_storage: ^13.0.0
+  image_picker: ^1.1.2
 
 
 dev_dependencies:
