Agrega la dependencia de la biblioteca de cámara en pubspec.yaml y actualiza pubspec.lock para incluir las versiones correspondientes de las dependencias relacionadas con la cámara. Se establece la descripción de uso de la cámara y el micrófono en Info.plist para cumplir con los requisitos de permisos en iOS. Se ajusta la configuración de minSdk en build.gradle.kts a 21. Además, se implementa la lógica para obtener los intercambios del usuario en HomeController y se actualizan las rutas para incluir la nueva página de creación de intercambios, mejorando la funcionalidad de la aplicación.

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,10 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<!-- camera -->
+	<key>NSCameraUsageDescription</key>
+	<string>We need access to your camera to take photos of your items</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>We need access to your microphone to record videos of your items</string>
 </dict>
 </plist>
