Implementa la configuración de firma para la versión de lanzamiento en build.gradle.kts, cargando propiedades desde un archivo key.properties. Se actualizan los controles de cámara en camera_controls.dart eliminando variables innecesarias y se ajusta el diseño de swap_item_card.dart para evitar desbordamientos, mejorando la presentación de los elementos de intercambio.

--- a/.gitignore
+++ b/.gitignore
@@ -89,6 +89,12 @@ lib/firebase_options.dart
 ios/Runner/GoogleService-Info.plist
 android/app/google-services.json
 
+# Android signing keys
+android/key.properties
+android/app/keystore/
+*.jks
+*.keystore
+
 # Logs
 *.log
 npm-debug.log*
