--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,12 +66,14 @@ dev_dependencies:
   freezed: ^2.5.7
   json_serializable: ^6.8.0
 
-#flutter_launcher_icons:
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
   image_path: "assets/app/icon/logo_dark.png"
   min_sdk_android: 21 # android min sdk min:16, default 21
+  # Configuración específica para Android adaptive icons
+  adaptive_icon_background: "#6044FF"
+  adaptive_icon_foreground: "assets/app/icon/logo_dark.png"
   web:
     generate: true
     image_path: "assets/app/icon/logo_dark.png"
