Elimina la entrada de firebase_options.dart del archivo .gitignore, permitiendo su inclusión en el seguimiento de cambios y facilitando la configuración de Firebase en el proyecto.

--- a/.gitignore
+++ b/.gitignore
@@ -85,7 +85,6 @@ hosting/.cache
 /emulator-ui/
 
 # Firebase keys
-lib/firebase_options.dart
 ios/Runner/GoogleService-Info.plist
 android/app/google-services.json
 
@@ -102,7 +101,9 @@ yarn-debug.log*
 yarn-error.log*
 
 # Environment files (local configs)
+.env
 /.env.*
+!.env.example
 
 # Build files
 build/
