--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   glossy: ^0.0.5
   #getx
   get: ^4.7.2
+  #environment variables
+  flutter_dotenv: ^5.1.0
   #video player
   video_player: ^2.10.0
   #firebase
@@ -105,6 +107,7 @@ flutter:
     - assets/app/icon/logo_dark.png
     - assets/welcome/
     - assets/vids/login/bg.mp4
+    - .env
   
     
   #   - images/a_dot_burr.jpeg
