feat: implementar configuración centralizada y manejo seguro de Firebase
- Agregar firebase_options.dart al .gitignore para seguridad
- Crear AppConfig para configuración centralizada
- Eliminar dependencia de flutter_dotenv
- Crear archivo de ejemplo para firebase_options.dart
- Agregar documentación completa de configuración
- Manejar configuración de Firebase de forma segura

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,8 +35,7 @@ dependencies:
   glossy: ^0.0.5
   #getx
   get: ^4.7.2
-  #environment variables
-  flutter_dotenv: ^5.1.0
+  #environment variables (removed - using AppConfig instead)
   #video player
   video_player: ^2.10.0
   #firebase
@@ -107,7 +106,6 @@ flutter:
     - assets/app/icon/logo_dark.png
     - assets/welcome/
     - assets/vids/login/bg.mp4
-    - .env
   
     
   #   - images/a_dot_burr.jpeg
