--- a/.gitignore
+++ b/.gitignore
@@ -87,6 +87,7 @@ hosting/.cache
 # Firebase keys
 ios/Runner/GoogleService-Info.plist
 android/app/google-services.json
+lib/firebase_options.dart
 
 # Android signing keys
 android/key.properties
