--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   firebase_auth: ^6.0.0
   firebase_database: ^12.0.0
   cloud_firestore: ^6.0.0
+  firebase_messaging: ^16.0.0
   #auth
   google_sign_in: ^7.1.1
   sign_in_with_apple: ^7.0.1
