Actualiza la gestión de notificaciones y mejora la integración de Cloud Messaging
- Se modifica la dependencia de `http` en `pubspec.yaml` para establecerla como directa.
- Se implementa el servicio `CloudMessagingService` para manejar la lógica de notificaciones en `ChatController`.
- Se optimiza el manejo del estado de la aplicación en `ChatPage` para gestionar la visibilidad de chats y el envío de notificaciones.
- Se eliminan métodos obsoletos relacionados con el manejo de notificaciones en `NotificationService`.
- Se mejora la lógica para determinar cuándo enviar notificaciones push, asegurando una mejor experiencia de usuario.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   firebase_database: ^12.0.0
   cloud_firestore: ^6.0.0
   firebase_messaging: ^16.0.0
+  #http requests
+  http: ^1.2.2
   #auth
   google_sign_in: ^7.1.1
   sign_in_with_apple: ^7.0.1
