Implementa la gestión de contadores de mensajes no leídos y actualiza la integración de badges
- Se añade la dependencia `app_badge_plus` en `pubspec.yaml` para gestionar el conteo de notificaciones.
- Se implementa la lógica para limpiar contadores de mensajes no leídos en `ChatController`, mejorando la experiencia del usuario al marcar chats como leídos.
- Se actualiza el servicio `CloudMessagingService` para manejar la actualización del badge count basado en mensajes no leídos.
- Se realizan ajustes en la inicialización de plugins en `GeneratedPluginRegistrant.swift` para asegurar la correcta integración de `app_badge_plus` en la aplicación.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   firebase_messaging: ^16.0.0
   #http requests
   http: ^1.2.2
+  #badge count for notifications
+  app_badge_plus: ^1.2.3
   #auth
   google_sign_in: ^7.1.1
   sign_in_with_apple: ^7.0.1
