Implementa soporte para notificaciones locales y actualiza dependencias
- Se añade la dependencia `flutter_local_notifications` en `pubspec.yaml` para gestionar notificaciones locales.
- Se actualiza `AndroidManifest.xml` para incluir permisos necesarios y configuraciones para notificaciones.
- Se implementa la inicialización de notificaciones locales en `CloudMessagingService`, mejorando la gestión de mensajes no leídos.
- Se actualiza `GeneratedPluginRegistrant.swift` y `generated_plugins.cmake` para registrar el plugin de notificaciones locales en las plataformas correspondientes.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   http: ^1.2.2
   #badge count for notifications
   app_badge_plus: ^1.2.3
+  #local notifications
+  flutter_local_notifications: ^19.4.0
   #auth
   google_sign_in: ^7.1.1
   sign_in_with_apple: ^7.0.1
