--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -113,6 +113,8 @@ flutter:
     - assets/app/icon/logo_dark.png
     - assets/welcome/
     - assets/vids/login/bg.mp4
+    - assets/app/login/google.png
+    - assets/app/login/apple.png
   
     
   #   - images/a_dot_burr.jpeg
