--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,8 @@ dependencies:
   firebase_storage: ^13.0.0
   image_picker: ^1.1.2
   camera: ^0.11.0+2
+  #ads
+  google_mobile_ads: ^6.0.0
 
 
 dev_dependencies:
