--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,7 +58,7 @@ dependencies:
   image_picker: ^1.1.2
   camera: ^0.11.0+2
   #ads
-  # google_mobile_ads: ^6.0.0
+  google_mobile_ads: ^6.0.0
 
 
 dev_dependencies:
