Agrega la inicialización de AdMob en `AdService` y actualiza el `AndroidManifest.xml` con el ID de aplicación de AdMob. Se modifica `main.dart` para registrar el `AdService` y se descomenta la inicialización diferida de AdMob, mejorando la integración de anuncios en la aplicación.

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -40,6 +40,11 @@
             android:name="flutterEmbedding"
             android:value="2" />
 
+        <!-- AdMob Application ID -->
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-6468767225905546~3114345310" />
+
         <!-- Firebase Cloud Messaging Service -->
         <service
             android:name="io.flutter.plugins.firebase.messaging.FlutterFirebaseMessagingService"
