--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -117,6 +117,10 @@ flutter:
     - assets/vids/login/bg.mp4
     - assets/app/login/google.png
     - assets/app/login/apple.png
+    - assets/app/banner/
+    - assets/app/banner/1.jpg
+    - assets/app/banner/2.jpg
+    - assets/app/banner/3.jpg
   
     
   #   - images/a_dot_burr.jpeg
