--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -58,5 +58,22 @@
 			<string>cstr6suwn9.skadnetwork</string>
 		</dict>
 	</array>
+	
+	<!-- Google Sign-in Section -->
+	<key>GIDClientID</key>
+	<string>138107844519-2mrj6rtdrh01n84j5ct6tl7rohr4ka7h.apps.googleusercontent.com</string>
+	
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.googleusercontent.apps.138107844519-2mrj6rtdrh01n84j5ct6tl7rohr4ka7h</string>
+			</array>
+		</dict>
+	</array>
+	<!-- End of the Google Sign-in Section -->
 </dict>
 </plist>
