--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,18 +1,12 @@
 name: swapme
-description: "A new Flutter project."
+description: "Swapme is a platform for swapping items with other users."
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.0+1
+version: 1.0.0+3
 
 environment:
   sdk: ^3.8.1
 
-# Dependencies specify other packages that your package needs in order to work.
-# To automatically upgrade your package dependencies to the latest versions
-# consider running `flutter pub upgrade --major-versions`. Alternatively,
-# dependencies can be manually updated by changing the version numbers below to
-# the latest version available on pub.dev. To see which dependencies have newer
-# versions available, run `flutter pub outdated`.
 dependencies:
   flutter:
     sdk: flutter
@@ -35,7 +29,6 @@ dependencies:
   glossy: ^0.0.5
   #getx
   get: ^4.7.2
-  #environment variables (removed - using AppConfig instead)
   #video player
   video_player: ^2.10.0
   #firebase
@@ -64,12 +57,6 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^5.0.0
   #code generation
   build_runner: ^2.4.13
@@ -97,15 +84,10 @@ flutter_launcher_icons:
     generate: false
     image_path: "assets/app/icon/logo_dark.png"
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
 flutter:
 
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
