--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -103,33 +103,18 @@ flutter:
     - assets/app/banner/1.png
     - assets/app/banner/2.png
     - assets/app/banner/3.png
-  
-    
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
 
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/to/resolution-aware-images
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/to/asset-from-package
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+fonts:
+    - family: Ubuntu
+      fonts:
+        - asset: assets/fonts/Ubuntu-Bold.ttf
+        - assets/fonts/Ubuntu-BoldItalic.ttf
+        - assets/fonts/Ubuntu-Italic.ttf
+        - assets/fonts/Ubuntu-Light.ttf
+        - assets/fonts/Ubuntu-LightItalic.ttf
+        - assets/fonts/Ubuntu-Medium.ttf
+        - assets/fonts/Ubuntu-MediumItalic.ttf
+        - assets/fonts/Ubuntu-Regular.ttf
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
