Actualiza la configuración de depuración en `launch.json` para las diferentes modalidades de `swapme`, añadiendo el campo `program` que apunta a `lib/main.dart` y cambiando el nombre de la configuración de depuración a "swapme (debug)", mejorando la claridad y funcionalidad del entorno de desarrollo.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,23 +4,26 @@
     // Para más información, visite: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        
         {
-            "name": "swapme",
+            "name": "swapme (debug)",
             "request": "launch",
-            "type": "dart"
+            "type": "dart",
+            "flutterMode": "debug",
+            "program": "lib/main.dart"
         },
         {
             "name": "swapme (profile mode)",
             "request": "launch",
             "type": "dart",
-            "flutterMode": "profile"
+            "flutterMode": "profile",
+            "program": "lib/main.dart"
         },
         {
             "name": "swapme (release mode)",
             "request": "launch",
             "type": "dart",
-            "flutterMode": "release"
+            "flutterMode": "release",
+            "program": "lib/main.dart"
         }
     ]
 }
