Agrega soporte para el paquete `url_launcher` en la aplicación, permitiendo abrir enlaces externos desde la interfaz. Se actualizan las dependencias en `pubspec.yaml` y `pubspec.lock`, y se implementan configuraciones necesarias en `Info.plist` para iOS. Además, se añaden métodos para abrir términos y condiciones y política de privacidad en la vista de perfil, mejorando la accesibilidad de esta información para el usuario.

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -75,5 +75,15 @@
 		</dict>
 	</array>
 	<!-- End of the Google Sign-in Section -->
+	
+	<!-- URL Launcher Configuration -->
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>https</string>
+		<string>http</string>
+		<string>mailto</string>
+		<string>tel</string>
+		<string>sms</string>
+	</array>
 </dict>
 </plist>
